--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 </head>
 <body>
+    <div class="links">
                <a href="LOGIN.html">LOGIN</a>
                <a href="SIGN-UP.html">Sign UP</a>
                <a href="ResetPassword.html">Reset Password</a>
-    
+            </div>
 
 </body>
